# bark

./: .gitignore  Cargo.toml  Makefile.toml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
android/: .gitignore  AGENTS.md  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mrsobakin/bark/: Appearance.kt  AudioCapture.kt  AudioReactiveBlobView.kt  BarkKeyboardService.kt  BarkPipeline.kt  OggOpusWriter.kt  PermissionBridgeActivity.kt  PipelineSettings.kt  PostProcessorAdapter.kt  SettingsActivity.kt  VADProcessor.kt
android/app/src/main/res/color/: settings_action_icon.xml
android/app/src/main/res/drawable/: bg_edittext.xml  bg_keyboard.xml  bg_mic.xml  bg_pulse.xml  ic_close.xml  ic_drag_handle.xml  ic_launcher_foreground.xml  ic_mic.xml  ic_mic_active.xml  ic_save.xml  ic_settings.xml  ic_spinner.xml
android/app/src/main/res/layout/: activity_settings.xml  dialog_regex_step.xml  item_postprocessor.xml  keyboard.xml
android/app/src/main/res/menu/: settings.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml
android/app/src/main/res/values-night-v31/: colors.xml
android/app/src/main/res/values-v31/: colors.xml
android/app/src/main/res/xml/: method.xml
bark-core/: Cargo.toml
bark-core/src/: bark.rs  config.rs  error.rs  lib.rs  ogg_opus.rs  postprocessor.rs  preprocessor.rs  vad.rs  whisper.rs
bark-core/src/audio/: mod.rs  opus.rs
bark-core/src/engine/: whisper.rs
bark-core/src/post/: mod.rs
bark-core/src/pre/vad/: fsm.rs  mod.rs  silero.rs
bark-core/src/util/: chunker.rs
bark-demo/: Cargo.toml
bark-demo/src/: main.rs
bark-jni/: Cargo.toml
bark-jni/src/: lib.rs
core/: Cargo.toml
core/scripts/: patch_silero_vad.py
core/src/: bark.rs  config.rs  lib.rs
core/src/audio/: mod.rs  opus.rs  resampler.rs
core/src/engine/: mod.rs  openai.rs  whisper.rs
core/src/post/: mod.rs
core/src/pre/: agc.rs  mod.rs  processor.rs
core/src/pre/vad/: fsm.rs  mod.rs  silero.rs  silero_vad.nnef.tgz
core/src/util/: chunker.rs
daemon/: Cargo.toml
daemon/src/: config.rs  daemon.rs  indicator.rs  main.rs  pidfile.rs  preview.rs  transcribe.rs  typer.rs
daemon/src/audio/: mod.rs  playback.rs  recorder.rs
daemon/src/daemon/: control.rs
daemon/src/daemon/control/: unix.rs  windows.rs
demo/: Cargo.toml
demo/src/: main.rs
jni/: Cargo.toml
jni/src/: lib.rs
