[workspace]
members = ["core", "jni", "daemon"]
resolver = "2"

[profile.release]
strip = true

# audiopus_sys builds its bundled C library with CMake. A Debug CMake build
# links the debug MSVC runtime, while Rust's dev profile links the release
# runtime. Build just this native dependency as release-compatible in dev.
[profile.dev.package.audiopus_sys]
opt-level = 1
debug = false

[workspace.package]
version = "1.2.0"
edition = "2021"

[workspace.dependencies]
bark-core = { path = "core" }
