[package]
name = "bark-core"
version = "0.1.0"
edition = "2021"
description = "Speech-to-text pipeline: VAD + AGC + Opus encoding + Whisper API + post-processing"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "blocking"] }
opus = "0.3"
ogg = "0.9"
ort = "2.0.0-rc.12"
