[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "barkd"
path = "src/main.rs"

[dependencies]
bark-core = { workspace = true }
anyhow = "1"
cpal = "0.15"
fs2 = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
toml = "0.8"
